Fix Details/Summary Transition on Firefox

--- a/styles.scss
+++ b/styles.scss
@@ -208,7 +208,7 @@ blockquote {
 }
 details {
   --max-height: 420px;
-  max-height: 3rem;
+  max-height: 3.5rem;
   outline: 1px solid var(--clr-border);
   box-sizing: border-box;
   overflow-y: auto;
